# debmagic

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post_setup.sh
.github/workflows/: ci.yml  release.yaml
debian/: changelog  control  copyright  debmagic.1  rules
docs/: conf.py  index.md
docs/develop/: _changelog.md  index.md  releasing.md
docs/usage/: getting-started.md
docs/usage/modules/: dh.md  index.md
lib/Dpkg/BuildDriver/: Debmagic.pm
src/debmagic/: _build.py  _build_order.py  _build_stage.py  _environment.py  _package.py  _package_version.py  _preset.py  _rules_file.py  _types.py  _utils.py  cli.py  v0.py  v1.py
src/debmagic/_build_driver/: build.py  common.py  driver_docker.py  driver_lxd.py  driver_none.py
src/debmagic/_dpkg/: buildflags.py
src/debmagic/_module/: dh.py
src/debmagic/_modules/: _base.py  autodetect.py  autotools.py  default.py  dh.py  python.py
tests/: .gitignore  test_packages.py
tests/integration/: test_packages.py
tests/unit/: test_exec.py  test_versioning.py
