[project]
name = "debmagic"
version = "0.1.0"
description = "build debian packages"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["python-debian>=1.0"]

[project.scripts]
debmagic = "debmagic.cli:main"

[project.urls]
homepage = "https://github.com/SFTtech/debmagic"
source = "https://github.com/SFTtech/debmagic.git"
issues = "https://github.com/SFTtech/debmagic/issues"
releasenotes = "https://github.com/SFTtech/debmagic/-/blob/main/debian/changelog"

[build-system]
requires = ["setuptools>=77.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=9.0.1", "pytest-cov>=7.0.0", "ruff", "pre-commit", "mypy"]

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'
exclude_gitignore = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".idea", ".mypy_cache", ".venv*", "docs", "debian"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "PLE", "PLW"]
ignore = ["E722"]

[tool.pytest]
testpaths = ["tests"]

[tool.pytest.ini_options]
addopts = ["--ignore=tests/packages"]
