[project]
name = "debmagic"
version = "0.0.1-alpha.1"
description = "build debian packages"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["python-debian>=1.0", "pydantic>=2,<3"]

[project.scripts]
debmagic = "debmagic.cli:main"

[project.urls]
homepage = "https://github.com/SFTtech/debmagic"
source = "https://github.com/SFTtech/debmagic.git"
issues = "https://github.com/SFTtech/debmagic/issues"
releasenotes = "https://github.com/SFTtech/debmagic/-/blob/main/debian/changelog"

[build-system]
requires = ["setuptools>=77.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=9.0.1", "pytest-cov>=7.0.0", "ruff", "pre-commit", "mypy"]

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR/src'
exclude_gitignore = true

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    ".idea",
    ".mypy_cache",
    ".venv*",
    "docs",
    "debian",
    "__pycache__",
    "*.egg_info",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "N", "PL", "RUF", "I001"]
ignore = ["E722", "PLR2004", "PLR0912", "PLR5501", "PLC0415", "PLR0911"]
mccabe.max-complexity = 25
pylint.max-args = 10

[tool.pytest]
testpaths = ["tests"]
addopts = ["--ignore=tests/integration/packages"]
